[package]
name = "hyper-http-proxy"
version = "1.1.0"
authors = ["MetalBear Tech LTD <hi@metalbear.co>"]
description = "A proxy connector for Hyper-based applications"
documentation = "https://docs.rs/hyper-http-proxy"
repository = "https://github.com/metalbear-co/hyper-http-proxy"
readme = "README.md"
keywords = ["hyper", "proxy", "tokio", "ssl"]
categories = ["web-programming::http-client", "asynchronous", "authentication"]
license = "MIT"
edition = "2021"
rust-version = "1.70.0"

[dependencies]
bytes = { version = "1.5", default-features = false }
futures-util = { version = "0.3", default-features = false }
headers = { version = "0.4", default-features = false }
http = { version = "1", default-features = false }
hyper = { version = "1", default-features = false, features = ["client"] }
hyper-rustls = { version = "0.27", optional = true, default-features = false }
hyper-tls = { version = "0.6", optional = true, default-features = false }
hyper-util = { version = "0.1", default-features = false, features = ["client", "client-legacy", "tokio"] }
native-tls = { version = "0.2", optional = true, default-features = false }
pin-project-lite = { version = "0.2", default-features = false }
tokio = { version = "1.35", default-features = false, features = ["io-std", "io-util"] }
tokio-native-tls = { version = "0.3", optional = true, default-features = false }
tokio-rustls = { version = "0.26", optional = true, default-features = false }
tower-service = { version = "0.3", default-features = false }
webpki-roots = { version = "0.26", optional = true, default-features = false }

[dev-dependencies]
futures = "0.3"
http-body-util = "0.1"
hyper = { version = "1.0", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["client", "client-legacy", "http1", "tokio"] }
tokio = { version = "1.35", features = ["full"] }

[features]
default = ["default-tls"]
default-tls = ["rustls-tls-native-roots"]
native-tls = ["dep:native-tls", "tokio-native-tls", "hyper-tls", "__tls"]
native-tls-vendored = ["native-tls", "tokio-native-tls?/vendored"]
rustls-tls-webpki-roots = ["dep:webpki-roots", "__rustls", "hyper-rustls/webpki-roots"]
rustls-tls-native-roots = ["__rustls", "hyper-rustls/rustls-native-certs"]

__tls = []

# Enables common rustls code.
# Equivalent to rustls-tls-manual-roots but shorter :)
__rustls = ["dep:hyper-rustls", "dep:tokio-rustls", "__tls"]
